# classee

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
algo/: daily_return.py  max_prof.py  sma_return.py  up_down_runs.py
assets/: daily_return.drawio  max_prof.drawio
class-management-system/: .clang-format  .gitignore  CMakeLists.txt  README.md
class-management-system/benchmark/: cmds.txt  generate_data.c  run_benchmark.sh
class-management-system/data/: P3_7-CMS.txt  cms.journal  cms.tlog
class-management-system/include/: cms.h  command_parser.h  config.h  database.h  journal.h  log.h  sorting.h  summary.h  types.h  utils.h
class-management-system/include/services/: journal.h  log.h  transaction_log.h
class-management-system/include/utils/: file_utils.h  general_utils.h  print_util.h  str_utils.h
class-management-system/src/: cms.c  command_parser.c  database.c  journal.c  log.c  main.c  summary.c  utils.c
class-management-system/src/services/: journal.c  log.c  transaction_log.c
class-management-system/src/utils/: file_utils.c  general_utils.c  print_util.c  str_utils.c
class-management-system/tests/: test_integration.c  test_runner.c  test_str_utils.c  test_utils.c
classee/: CMakeLists.txt  README.md
classee/benchmark/: cmds.txt  generate_data.c  generate_data.sh  generate_log.sh  run_benchmark.sh
classee/include/: config.h  database.h  types.h
classee/include/services/: transaction_log.h
classee/include/utils/: general_utils.h  print_util.h  str_utils.h
classee/src/: command_parser.c  database.c  main.c  summary.c
classee/src/services/: log.c  transaction_log.c
classee/src/utils/: file_utils.c  general_utils.c  print_util.c  str_utils.c
classee/tests/: test_file_utils.c  test_runner.c
max_prof/: max_prof.py
sma_return/: sma_return.py
stock-market-analysis/: README.md  pyproject.toml
stock-market-analysis/algo/: sma_return.py  validate.py
stock-market-analysis/assets/: system_arch.drawio
stock-market-analysis/templates/: index.html
stock-market-analysis/tests/: test_daily_return.py
templates/: base.html  index.html
tests/: test_daily_return.py  test_max_prof.py  test_sma.py  test_sma_returns.py  test_up_down_runs.py
up_down_runs/: up_down_runs.py
