[project]
name = "stock-market-analysis"
version = "0.0.1"
description = "Stock market analysis for INF1002 Programming Fundamentals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "uvicorn>=0.35.0",
]
